hphp/test/slow/hack_mode/closing-tag-asp.php.expectf
Fatal error: HH mode: %> not allowed (Line: %d, Char: %d)
syntax error, unexpected T_HH_ERROR, expecting $end in %s/test/slow/hack_mode/closing-tag-asp.php on line 2
